<resources>
    <string name="app_name">BOCES</string>
    <string name="txtEditTitle">Edit Students and Teachers</string>
    <string name="btnTeachers">Teachers</string>
    <string name="btnStudents">Students</string>
    <string name="txtFirstName">First Name</string>
    <string name="txtLastName">Last Name</string>
    <string name="txtAge">Age</string>
    <string name="txtYear">Year</string>
    <string name="txtTeachId">Teacher ID</string>
    <string name="txtAddStudent">Add Student</string>
    <string name="txtRemoveStudent">Remove</string>
    <string name="txtRemoveAll">Remove All</string>
    <string name="txtEmail">Email</string>
    <string name="txtPhone">Phone Number</string>
    <string name="txtAddTeacher">Add Teacher</string>
    <string name="txtRemoveTeacher">Remove Teacher</string>
    <string name="txtMainTitle">WELCOME! \n Please Sign In!</string>
    <string name="btnAdminStudents">Edit Students</string>
    <string name="btnAdminTeachers">Edit Teachers</string>
    <string name="btnAdminTasks">Edit Tasks</string>
    <string name="txtSelectTeacher">Select your teacher: </string>
    <string name="txtSelectSelf">Select yourself: </string>
    <string name="txtSelectTask">Select the task you will be completing: </string>
    <string name="btnClockIn">Clock In</string>
    <string name="btnAdminReport">Generate Report</string>
    <string name="txtTaskName">Task Name</string>
    <string name="txtTaskDescr">Task Description \n200 character limit</string>
    <string name="btnAdminLog">Admin Login</string>
    <string name="btnAddTask">Add Task</string>
    <string name="btnRemoveTask">Remove Task</string>
    <string name="btnEdit">Edit</string>
    <string name="txtClockedInTitle">You are currently clocked in</string>
    <string name="lblTimerDefault">00:00:00</string>
    <string name="lblTimerLabel">Time spent on current task:</string>
    <string name="btnClockOut">Clock Out</string>
    <string name="btnAddImage">Add Image</string>
    <string name="btnGenerateReport">Generate Report</string>
    <string name="btnSelectStudent">Select by Student</string>
    <string name="btnSelectTeacher">Select by Teacher</string>
    <string name="txtSelectATeacher">Select a Teacher</string>
    <string name="txtSelectAStudent">Select a Student</string>
    <string name="txtSelectATask">Select a Task</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="txtPhoneNum">Phone</string>
    <string name="txtStudentID">Student ID</string>
    <string name="txtStartDateLabel">Select the start date: </string>
    <string name="txtEndDateLabel">Select the end date: </string>
    <string name="txtAllStudentReport">Generate report for all students of this teacher</string>
</resources>
