<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.student.cooper_assign2.TaskListActivity"
    android:weightSum="1">


    <EditText
        android:id="@+id/txtTaskName"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/txtTaskName"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|start"
        android:hint="@string/txtTaskDescr"
        style="@style/Widget.AppCompat.EditText"
        android:lines="8"
        android:maxLength="200"
        android:scrollbars="vertical" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnAddTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="@string/btnAddTask" />

        <Button
            android:id="@+id/btnRemoveTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="@string/btnRemoveTask" />

        <Button
            android:id="@+id/btnEditTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".33"
            android:text="@string/btnEditTask" />


    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
