<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.student.cooper_assign2.Edit_Student"
    android:weightSum="1">

    <TextView
        android:id="@+id/lblSelectTeacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/txtSelectATeacher"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/spinEditTeacher"
        android:background="#0090ff"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="60sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75sp"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="15sp"
        android:orientation="horizontal"
        android:weightSum="1">
        <View
            android:layout_width="0sp"
            android:layout_height="0sp"
            android:layout_weight=".6" />

        <ImageView
            android:id="@+id/teacherImageEdit"
            android:layout_width="100sp"
            android:layout_height="75sp"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/noimgavail" />

        <Button
            android:id="@+id/btnAddTeacherPicture"
            android:layout_width="50sp"
            android:layout_height="54dp"
            android:layout_gravity="right"
            android:background="@mipmap/camerabtn"
            android:onClick="getImageEdit"
            android:gravity="center_vertical" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblTeacherID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtTeachId"
        android:textSize="18sp"
        android:paddingLeft="15sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblTFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:paddingLeft="15sp"
            android:text="@string/txtFirstName"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtTFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight=".7"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lblTLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="15sp"
            android:textSize="18sp"
            android:layout_weight=".3"
            android:text="@string/txtLastName" />

        <EditText
            android:id="@+id/txtTLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight=".7"
            android:inputType="textPersonName" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="15sp"
            android:textSize="18sp"
            android:layout_weight=".3"
            android:text="@string/txtEmail" />

        <EditText
            android:id="@+id/txtTEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight=".7"
            android:inputType="phone" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblTPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:paddingLeft="15sp"
            android:text="@string/txtPhoneNum"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtTPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight=".7"
            android:inputType="textEmailAddress" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:onClick="save"
            android:text="@string/btnSave" />

</LinearLayout>
