<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.student.cooper_assign2.Edit_Student"
    android:weightSum="1">

    <TextView
        android:id="@+id/lblSelectStudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/txtSelectAStudent"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/spinEditStudent"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_gravity="center_horizontal"
        android:background="#0090ff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75sp"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="15sp"
        android:orientation="horizontal"
        android:weightSum="1">
        <View
            android:layout_width="0sp"
            android:layout_height="0sp"
            android:layout_weight=".6" />

        <ImageView
            android:id="@+id/studentImageEdit"
            android:layout_width="100sp"
            android:layout_height="75sp"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/noimgavail" />

        <Button
            android:id="@+id/btnAddStudentPicture"
            android:layout_width="50sp"
            android:layout_height="54dp"
            android:layout_gravity="right"
            android:background="@mipmap/camerabtn"
            android:onClick="getImageEdit"
            android:gravity="center_vertical" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblStudentID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15sp"
        android:text="@string/txtStudentID"
        android:textSize="18sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblSFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:paddingLeft="15sp"
            android:text="@string/txtFirstName"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtSFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lblSLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="15sp"
            android:textSize="18sp"
            android:layout_weight=".3"
            android:text="@string/txtLastName" />

        <EditText
            android:id="@+id/txtSLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight=".7"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:paddingLeft="15sp"
            android:text="@string/txtAge"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtSAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:ems="10"
            android:inputType="phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblSYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:paddingLeft="15sp"
            android:text="@string/txtYear"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtSYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_weight=".7"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinEditStudentsTeacher"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="#0090ff" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:onClick="save"
            android:text="@string/btnSave" />

</LinearLayout>
