<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.student.cooper_assign2.ClockedInActivity">

    <TextView
        android:id="@+id/lblWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/lblCurrentTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/lblTimerLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblTimerLabel"
        android:textSize="20sp"
        android:layout_marginTop="15sp"
        android:paddingLeft="10sp"/>

    <TextView
        android:id="@+id/lblTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblTimerDefault"
        android:layout_marginTop="15sp"
        android:textAlignment="center"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btnClockOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/btnClockOut"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lblTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:textSize="20sp"/>
</LinearLayout>
