<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.student.cooper_assign2.StudentListActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtFirstName"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="6dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtLastName"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtFirstName"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstName"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtFirstName" />

    <EditText
        android:id="@+id/txtYear"
        android:layout_width="214dp"
        android:layout_height="0dp"
        android:ems="10"
        android:hint="@string/txtYear"
        android:inputType="text"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="1dp"
        app:layout_constraintTop_toBottomOf="@+id/txtAge"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/txtAge"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/txtAge"
        android:inputType="number"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtLastName"
        app:layout_constraintTop_toBottomOf="@+id/txtLastName"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtLastName" />

    <Button
        android:id="@+id/btnRemoveStudent"
        android:layout_width="116dp"
        android:layout_height="53dp"
        android:text="@string/txtRemoveStudent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="68dp"
        app:layout_constraintTop_toBottomOf="@+id/txtYear"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick = "removeCheckedStudents"/>


    <Button
        android:id="@+id/btnRemoveAll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="removeAllStudents"
        android:text="@string/txtRemoveAll"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnRemoveStudent"
        android:layout_marginEnd="5dp"
        app:layout_constraintRight_toRightOf="@+id/lstStudentsView"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="@+id/btnRemoveStudent"
        app:layout_constraintLeft_toRightOf="@+id/btnRemoveStudent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <Button
        android:id="@+id/btnAddStudent"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:onClick="addStudent"
        android:text="@string/txtAddStudent"
        app:layout_constraintRight_toLeftOf="@+id/btnRemoveStudent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="6dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnRemoveStudent"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/lstStudentsView"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="6dp" />

    <Spinner
        android:id="@+id/spinTeacherList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/background_light"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btnAddStudent"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtYear"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="21dp"
        android:layout_marginRight="21dp" />

    <ListView
        android:id="@+id/lstStudentsView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/btnAddStudent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />
</android.support.constraint.ConstraintLayout>
